# gpu-spectrogram

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  GPU Spectrogram.sln  README.md  conanfile.txt
assets/opencl/: DensityHeatmapUpdater.cl  FFTCooleyTukeyRadix2Float.cl
assets/samples/: Samples sources.txt
assets/shaders/checker_grid/: Fragment.glsl  Vertex.glsl
assets/shaders/line/: Fragment.glsl  Vertex.glsl
assets/shaders/rtsa/: Fragment.glsl  Vertex.glsl
assets/shaders/time_frequency_heatmap/: Fragment.glsl  MagnitudeLinearScale.glsl  MagnitudeLogarithmicScale.glsl  Vertex.glsl
assets/shaders/utils/: FrequencyLinearScale.glsl  FrequencyLogarithmicScale.glsl  IntensityColoredScale.glsl  IntensityGrayScale.glsl
docs/: Architecture.md  BenchmarkResults.xlsx  ClassDiagramSpectrumRenderingOpengl.puml  SpectrActivityDiagram.puml  SpectrClassDiagram.puml
include/: stdarg.hpp
include/glad/: glad.h
lib/win32/: OpenCL.lib  OpenCLExt.lib  OpenCLUtils.lib  OpenCLUtilsCpp.lib  OpenCLUtilsCppd.lib  OpenCLUtilsd.lib
lib/win64/: bladeRF.lib
msvc/: Audio Loader.vcxproj  Audio Loader.vcxproj.filters  Benchmark.vcxproj  Benchmark.vcxproj.filters  Calc CPU Benchmark.vcxproj  Calc CPU Benchmark.vcxproj.filters  Calc CPU.vcxproj  Calc CPU.vcxproj.filters  Calc CUDA.vcxproj  Calc CUDA.vcxproj.filters  Calc OpenCL Benchmark.vcxproj  Calc OpenCL Benchmark.vcxproj.filters  Calc OpenCL.vcxproj  Calc OpenCL.vcxproj.filters  FFT Coef Generator.vcxproj  FFT Coef Generator.vcxproj.filters  FFT Comparator.vcxproj  FFT Comparator.vcxproj.filters  GL Renderer.vcxproj  GL Renderer.vcxproj.filters  GPU Spectrogram.vcxproj  GPU Spectrogram.vcxproj.filters  ImGui.vcxproj  ImGui.vcxproj.filters  OpenGL OpenCL Coop.vcxproj  OpenGL OpenCL Coop.vcxproj.filters  PortAudio.vcxproj  PortAudio.vcxproj.filters  Real Time Input.vcxproj  Real Time Input.vcxproj.filters  Utils Test.vcxproj  Utils Test.vcxproj.filters  Utils.vcxproj  Utils.vcxproj.filters
msvc/vulkan-renderer/: vulkan-renderer.vcxproj
scripts/: format_src.py
src/: CMakeLists.txt
src/audio_loader/: CMakeLists.txt
src/audio_loader/include/spectr/audio_loader/: AudioData.h  AudioDataGenerator.h  AudioLoader.h  SignalData.h  SignalDataGenerator.h  WavLoader.h
src/audio_loader/src/: AudioData.cpp  AudioDataGenerator.cpp  AudioLoader.cpp  SignalData.cpp  SignalDataGenerator.cpp  WavLoader.cpp
src/audio_loader/test/: CMakeLists.txt  WavLoaderTest.cpp
src/calc_cpu/: CMakeLists.txt
src/calc_cpu/benchmark/: CMakeLists.txt  FftCooleyTukeyRadix2CpuBenchmark.cpp
src/calc_cpu/include/spectr/calc_cpu/: FftCooleyTukeyRadix2.h  FftCooleyTukeyUtils.h
src/calc_cpu/src/: FftCooleyTukeyRadix2.cpp
src/calc_cpu/test/: CMakeLists.txt  FftCooleyTukeyRadix2Test.cpp
src/calc_cuda/include/spectr/calc_cuda/: FftCooleyTukeyRadix2Cuda.h
src/calc_cuda/src/: DensityHeatmapUpdater.cu  FftCooleyTukeyRadix2Cuda.cu
src/calc_opencl/: CMakeLists.txt
src/calc_opencl/benchmark/: CMakeLists.txt  FftCooleyTukeyRadix2GpuBenchmark.cpp
src/calc_opencl/include/spectr/calc_opencl/: FftCooleyTukeyRadix2.h  FftCooleyTukeyRadix2CL.h  OpenclApi.h  OpenclManager.h  OpenclUtils.h  RtsaUpdater.h
src/calc_opencl/src/: FftCooleyTukeyRadix2.cpp  FftCooleyTukeyRadix2CL.cpp  OpenclManager.cpp  OpenclUtils.cpp  RtsaUpdater.cpp
src/calc_opencl/test/: CMakeLists.txt  FftCooleyTukeyRadix2Test.cpp
src/cmake_utils/: CMakeLists.txt
src/desktop_app/: CMakeLists.txt
src/desktop_app/include/spectr/desktop_app/: AudioFileTimeFrequencyWorker.h  BladeRFInputFrame.h  CameraBoundsController.h  CameraWaterfallMover.h  CmdArgumentParser.h  DesktopAppSettings.h  HeatmapCursorInfo.h  HeatmapViewSettingsWidget.h  Input.h  MinMaxWidget.h  MockTimeFrequencyWorker.h  PanTool.h  RtsaViewSettingsWidget.h  RtsaWindow.h  SpectrDesktopApp.h  SplitWindow.h  WaterfallWindow.h  Window.h
src/desktop_app/src/: AudioFileTimeFrequencyWorker.cpp  BladeRFInputFrame.cpp  CameraBoundsController.cpp  CameraWaterfallMover.cpp  CmdArgumentParser.cpp  HeatmapCursorInfo.cpp  HeatmapViewSettingsWidget.cpp  Input.cpp  MinMaxWidget.cpp  MockTimeFrequencyWorker.cpp  PanTool.cpp  RtsaViewSettingsWidget.cpp  RtsaWindow.cpp  SpectrDesktopApp.cpp  SplitWindow.cpp  WaterfallWindow.cpp  Window.cpp  main.cpp
src/dev_apps/: CMakeLists.txt
src/dev_apps/OpenclOpenglCoop/: CMakeLists.txt  main.cpp
src/dev_apps/fft_coef_generator/: CMakeLists.txt  main.cpp
src/dev_apps/fft_comparator/: CMakeLists.txt  main.cpp
src/real_time_input/include/spectr/real_time_input/: FileInput.h  RealTimeInput.h  RealTimeInputBladeRF.h  RealTimeInputPortAudio.h  SampledData.h
src/real_time_input/src/: FileInput.cpp  RealTimeInput.cpp  RealTimeInputBladeRF.cpp  RealTimeInputPortAudio.cpp  SampledData.cpp
src/render_gl/: CMakeLists.txt
src/render_gl/include/spectr/render_gl/: AxisRenderer.h  Camera.h  CheckerGridRenderer.h  CpuOpenglAdapter.h  FpsGuard.h  GlfwUtils.h  GraphicsApi.h  ImguiUtils.h  OpenGlUtils.h  OpenclOpenglAdapter.h  PanTool.h  RenderContext.h  RtsaContainer.h  RtsaRenderer.h  ScalableAxisRenderer.h  (+2 more)
src/render_gl/src/: AxisRenderer.cpp  Camera.cpp  CheckerGridRenderer.cpp  CpuOpenglAdapter.cpp  FpsGuard.cpp  GlfwUtils.cpp  ImguiUtils.cpp  OpenGlUtils.cpp  OpenclOpenglAdapter.cpp  PanTool.cpp  RenderContext.cpp  RtsaContainer.cpp  RtsaRenderer.cpp  ScalableAxisRenderer.cpp  TimeFrequencyHeatmapContainer.cpp  TimeFrequencyHeatmapRenderer.cpp  glad.c
src/utils/: CMakeLists.txt
src/utils/include/spectr/utils/: Assert.h  Asset.h  Exception.h  File.h  Math.h  Options.h  OsUtils.h  Timer.h  Version.h  VersionConstants.h  VersionConstants.h.in
src/utils/src/: Assert.cpp  Asset.cpp  Exception.cpp  File.cpp  Math.cpp  Timer.cpp  Version.cpp
src/utils/src/linux/: OsUtils.cpp
src/utils/src/win/: OsUtils.cpp
src/utils/test/: CMakeLists.txt  ExceptionTest.cpp
